# hpxMP

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
doc/: done-todo.md  feature.md  install.md  ompt-priorities.txt  todo.md  usecases.md  what's_new_v0.1.0.md  what's_new_v0.2.0.md  what's_new_v0.3.0.md
examples/: CMakeLists.txt
examples/gcc_example/: CMakeLists.txt  for-dynamic-order-gcc.c  hello_world_gcc.c  omp-for-dynamic_gcc.c  omp-for_gcc.c  private_shared_gcc.c  task_gcc.c  task_wait_single_gcc.c  task_with_global.c
examples/hpx/bench/: hpx-mmult.cpp  mmult-serial.cpp
examples/ompt/: CMakeLists.txt  callback.h  hello_world.c  hello_world.cpp  implicit_task.c  implicit_task_callback.h  task_ex.c  task_ex.cpp  task_schedule.c  task_schedule_callback.h
examples/openmp/: CMakeLists.txt  hello_world.cpp
examples/working_dir/: CMakeLists.txt
src/: gcc_hpxMP.cpp  gcc_hpxMP.h  hpx_runtime.cpp  hpx_runtime.h  intel_hpxMP.cpp  intel_hpxMP.h  kmp_atomic.h  kmp_ftn_os.h  loop_schedule.cpp  ompt-event-specific.h  ompt-internal.h  ompt.h  ompt_hpx-general.cpp  thread_pool.cpp  thread_pool.h
tests/: CMakeLists.txt
tests/omp/tests/src/: CMakeLists.txt  omp-fib.c  omp-task-tree.c
tests/ompt/: CMakeLists.txt  callback.h  ompt_par_single.cpp  ompt_parallel.cpp  ompt_parallel_nested.cpp  ompt_task.cpp  ompt_task_wait.cpp  ompt_wait_barrier.cpp  par_for.cpp  par_single.cpp  parallel.cpp  parallel_nested.cpp  task.cpp  task_dep.cpp  task_fp.cpp  task_group.cpp  task_implicit_simple.cpp  task_simple.cpp  task_wait.cpp  thread_begin_end.cpp  wait_barrier.cpp
tests/openmp/: CMakeLists.txt  app_old_fib.cpp  app_omp_fib.cpp  app_vla.cpp  barrier.cpp  critical.cpp  for_decrement.cpp  for_dynamic.cpp  for_increment.cpp  for_nowait.cpp  for_reduction.cpp  for_shared.cpp  for_static.cpp  master.cpp  old-fib.c  omp-fib.c  omp-firstprivate.c  omp-for-shared.c  omp-lu.c  omp-reduction.c  omp-single-copyprivate-1var.c  omp-single-copyprivate.c  omp-single-nowait.c  omp-task-dep.c  omp-task-tree.c  omp-task.c  omp-vla.c  par_for_.cpp  par_nested.cpp  par_single.cpp  sections.cpp  single_copyprivate.cpp  single_copyprivate_1var.cpp  single_copyprivate_2.cpp  task_depend.cpp  task_fp_.cpp  task_tree.cpp  task_untied.cpp  taskwait.cpp  taskwait_2.cpp  (+1 more)
tests/openmp/adding_c++/: CMakeLists.txt  barrier.cpp  master.cpp
tests/openmp/issues/: CMakeLists.txt  get_thread_num.c  parallel_multi.c  parallel_multi.cpp  task_no_parallel.cpp  task_tree_simple.cpp
tests/openmp/regressions/: CMakeLists.txt  parallel_multi.cpp  task_no_parallel.cpp  task_tree_simple.cpp
tests/openmp/unit/: CMakeLists.txt  app_omp_fib.cpp  sections.cpp  sections_2.cpp  task_depend.cpp  task_in_reduction.cpp  taskgroup.cpp  taskwait_2.cpp
